decoupled board ui from the board model by making the move class the interace between the two.  implemented the ai. inverted ninja color for higher visibility

--- a/public/css/othello.css
+++ b/public/css/othello.css
@@ -53,11 +53,12 @@ body {
 }
 
 #outcome {
+  position: relative;
 	font-size: 40px;
     font-family: Courier New,Courier,monospaced;
     font-weight: bold;
-	vertical-align: bottom;
-	color: red;	
+	color: red;
+  top: 450px;
 }
 
 #gameName {
